<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartFragRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.btmnavi.cart.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTopCurve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/top_curve"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvShoppingCartTag"
            style="@style/Theme.HeadingMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/shopping_cart_tag"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivTopCurve"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCShoppingTag"
            style="@style/Theme.TextColorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginVertical="10dp"
            android:text="@string/continue_shopping"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintStart_toEndOf="@id/ivTopCurve"
            app:layout_constraintTop_toBottomOf="@id/mtvShoppingCartTag"/>

        <LinearLayout
            android:id="@+id/llCartDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/mtvCShoppingTag">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvItemsTag"
                style="@style/Theme.TextColorGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginVertical="10dp"
                android:padding="2dp"
                android:text="@string/items_tag"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvPriceTag"
                style="@style/Theme.TextColorGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:textAlignment="center"
                android:paddingStart="12dp"
                android:text="@string/price_tag"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvQtyTag"
                style="@style/Theme.TextColorGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:textAlignment="center"
                android:text="@string/qty_tag"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvTotalTag"
                style="@style/Theme.TextColorGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:paddingHorizontal="4dp"
                android:text="@string/total_tag"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/llCartDetails"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

        <View
            android:id="@+id/viewBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorHint"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/rvHomeCart"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSubtotal"
            style="@style/Theme.HeadingSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/sub_total"
            app:layout_constraintTop_toBottomOf="@id/viewBorder"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbCheckout"
            style="@style/Theme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/colorHint"
            android:text="@string/checkout_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtvSubtotal"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>