<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wishListFragRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.btmnavi.WishListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSeeMoreTag"
            style="@style/Theme.HeadingMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/see_more"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSeeFav"
            style="@style/Theme.TextColorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/see_your_favourite_none"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/mtvSeeMoreTag" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvPriceTag"
            style="@style/Theme.TextColorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_tag"
            app:layout_constraintBottom_toTopOf="@+id/etSearchBar"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/mtvItemsTag"
            app:layout_constraintTop_toBottomOf="@+id/mtvSeeFav" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvItemsTag"
            style="@style/Theme.TextColorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/items_tag"
            app:layout_constraintTop_toBottomOf="@id/mtvSeeFav"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearchBar"
            style="@style/Theme.TextColorGrey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/border_curve"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="6dp"
            android:hint="@string/search_here"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/mtvItemsTag" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWishList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearchBar"
            tools:listitem="@layout/rv_item_fs_seemore"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>