<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivRegSuccess"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/reg_success_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSuccess"
            style="@style/Theme.TextColorPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:padding="6dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/ivRegSuccess"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvSuccessTag"
            style="@style/Theme.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_success_msg"
            android:padding="4dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/mtvSuccess"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mBtnDone"
            style="@style/Theme.Button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/reg_success_done"
            android:backgroundTint="@color/colorTheme"
            app:layout_constraintTop_toBottomOf="@id/mtvSuccessTag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>