<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLoginAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTopCurve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_curve"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvLoginTag"
        style="@style/Theme.HeadingLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tag"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivTopCurve"
        app:layout_constraintEnd_toStartOf="@+id/ivTopCurve"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/email_hint"
        app:hintTextColor="@color/colorHint"
        app:boxStrokeColor="@color/colorTheme"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/ivTopCurve">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Theme.Caption"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:fontFamily="@font/montserratsb"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/password_hint"
        app:hintTextColor="@color/colorHint"
        app:boxStrokeColor="@color/colorTheme"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Theme.Caption"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratsb"
            android:includeFontPadding="false"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvForgotTag"
        style="@style/Theme.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:padding="6dp"
        android:text="@string/forgot_password_tag"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbLogin"
        style="@style/Theme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/colorTheme"
        android:text="@string/login_tag"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/mtvForgotTag"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvNoAccount"
        style="@style/Theme.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/no_account_sign"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/mbLogin" />

    <View
        android:id="@+id/viewStart"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="14dp"
        android:background="@color/colorBlack"
        app:layout_constraintEnd_toStartOf="@+id/mtvOr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/mtvNoAccount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvOr"
        style="@style/Theme.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/or"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/viewEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewStart"
        app:layout_constraintTop_toBottomOf="@id/mtvNoAccount" />

    <View
        android:id="@+id/viewEnd"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="14dp"
        android:background="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mtvOr"
        app:layout_constraintTop_toBottomOf="@id/mtvNoAccount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvLogFb"
        style="@style/Theme.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"
        android:paddingVertical="6dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/facebook_icon"
        android:drawablePadding="10dp"
        android:background="@drawable/border_curve"
        app:layout_constraintTop_toBottomOf="@id/mtvOr"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvLogGmail"
        style="@style/Theme.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:paddingVertical="6dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:drawableStart="@drawable/google_icon"
        android:drawablePadding="10dp"
        android:background="@drawable/border_curve"
        app:layout_constraintTop_toBottomOf="@id/mtvLogFb"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBottomCurve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btm_curve"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>